Update code-setup.md